--- a/layout.pug
+++ b/layout.pug
@@ -4,8 +4,7 @@ html
     meta(charset='utf-8')
     title Accordion plugin documentation
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    link(rel='stylesheet', href='bootstrap.min.css')
-    link(rel='stylesheet', href='prism.css')
+    block styles
   body(data-spy='scroll', data-target='#bs-example-navbar-collapse-1', data-offset='170')
     header
       nav.navbar.navbar-toggleable-md.fixed-top.navbar-inverse.bg-primary(role='navigation')
@@ -98,9 +97,4 @@ html
                 divHeading: '.panel-heading',
                 divCollapse: '.collapse'
               });
-    script(src='https://code.jquery.com/jquery-3.1.1.slim.min.js', integrity='sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=', crossorigin='anonymous')
-    script(src='tether.min.js')
-    script(src='bootstrap.min.js')
-    script(src='prism.js')
-    script(src='accordion.js')
-    script(src='main.js')
+    block scripts
